# Nano-MoE-JAX

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml  publish.yml
blog/: nano_moe_blog.md
docs/: docusaurus.config.js  package-lock.json  sidebars.js
docs/blog/: 2026-02-24-nano-moe-deep-dive.md  authors.yml
docs/docs/: intro.md  quickstart.md
docs/docs/api/: config.md  layers.md  model.md  train.md  utils.md
docs/docs/architecture/: attention.md  expert-ffn.md  full-model.md  moe-layer.md  overview.md  router.md  transformer-block.md
docs/docs/training/: load-balancing.md  pipeline.md  results.md
docs/src/css/: custom.css
docs/src/pages/: index.js
examples/: train_shakespeare.py
nano_moe/: __init__.py  config.py  layers.py  model.py  train.py  utils.py
tests/: test_layers.py  test_model.py
