[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-moe-jax"
version = "0.1.0"
description = "Nano Mixture-of-Experts language model in JAX/Flax — a lightweight, educational MoE implementation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "carrycooldude"},
]
keywords = ["jax", "mixture-of-experts", "moe", "transformer", "language-model", "flax", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.1.7",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://github.com/carrycooldude/MoE-JAX"
Repository = "https://github.com/carrycooldude/MoE-JAX"
Issues = "https://github.com/carrycooldude/MoE-JAX/issues"

[tool.setuptools.packages.find]
include = ["nano_moe*"]
